2010-10-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* OSConfigurator_linux24.cpp (printRunTimeWrappers): fixed SF bug
	3077132 "no PREROUTING rule with *-Interface". Rules matching
	addresses of a wildcard interface (e.g. "ppp*") were not properly
	generated.

	* RuleSetView.cpp (updateSelectionSensitiveActions): fixed SF bug
	3039681 "context-menu items inconsistent for Single/Multiple
	rules". When several rules are selected in rule set, some context
	menu itmes should turn to plural.

	* FWWindow.cpp (prepareRulesMenu): fixed #1778 "main menu Rules
	should have the same items that context RuleSetView menu when no
	rules are selected"

2010-10-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (showObjectInTree): fixed #1777 "scroll
	new fw object to the top of the tree view panel once its created"
	This has side effect in that some other operations that open an
	object in the tree will also sc roll the tree to position this
	object at the top.

	* FWBSettings.cpp (setCustomTemplatesEnabled): fixed #1791 "Add
	preference flag to enable / disable the Custom templates button on
	the New Firewall Wizard". Use of the custom template library
	to create new firewall object is now optional, controlled by
	a checkbox in the "Object" tab of the gobal preferenes dialog.
	New users will have this option turned off by default, however
	existing users will see it enabled for backwards compatibility.

	* FindObjectWidget.cpp (showObject): fixed #1790 "When an object
	is found using Find and the object is in the object tree, the
	keyboard focus shifts to the Object Panel". The "find" pabel now
	retains keyboard focus after it shows found object in the tree,
	this allows the user to just hit Enter on the keyboard to find
	the next object.

	* FindObjectWidget.cpp (objectDeleted): fixed #1785 "Deleting
	graphic icon of object from Find tab should also remove the text
	name or label"

	* newFirewallDialog.cpp (changed): fixed #1770 Eliminated pause