@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE FWObjectDatabase SYSTEM "fwbuilder.dtd">
-<FWObjectDatabase xmlns="http://www.fwbuilder.org/1.0/" version="17" lastModified="1275958417" id="root">
+<FWObjectDatabase xmlns="http://www.fwbuilder.org/1.0/" version="17" lastModified="1286404816" id="root">
   <Library id="syslib000" color="#d4f8ff" name="Standard" comment="Standard objects" ro="True">
     <AnyNetwork id="sysid0" name="Any" comment="Any Network" ro="False" address="0.0.0.0" netmask="0.0.0.0"/>
     <AnyIPService id="sysid1" protocol_num="0" name="Any" comment="Any IP Service" ro="False"/>
@@ -1211,6 +1211,10 @@
         <Network id="id3FA3F5C2" name="dest nat net 2" comment="" ro="False" address="209.165.200.224" netmask="255.255.255.224"/>
         <Network id="net-Internal_net" name="Internal_net" comment="" ro="False" address="192.168.1.0" netmask="255.255.255.0"/>
         <Network id="id47B7C22921818" name="n10.3.14.0" comment="" ro="False" address="10.3.14.0" netmask="255.255.255.0"/>
+        <Network id="id68966X11724" name="n10.1.3.0" comment="" ro="False" address="10.1.3.0" netmask="255.255.255.0"/>
+        <Network id="id68975X11724" name="n10.1.4.0" comment="" ro="False" address="10.1.4.0" netmask="255.255.255.0"/>
+        <Network id="id68984X11724" name="n10.1.5.0" comment="" ro="False" address="10.1.5.0" netmask="255.255.255.0"/>
+        <Network id="id69063X11724" name="n10.1.6.0" comment="" ro="False" address="10.1.6.0" netmask="255.255.255.0"/>
       </ObjectGroup>
       <ObjectGroup id="stdid15_1" name="Address Ranges" comment="" ro="False">
         <AddressRange id="id3CD8769F" name="test_range_1" comment="" ro="False" start_address="192.168.1.11" end_address="192.168.1.15"/>
@@ -1322,7 +1326,7 @@
       <ServiceGroup id="stdid05_1_userservices" name="Users" comment="" ro="False"/>
     </ServiceGroup>
     <ObjectGroup id="stdid12_1" name="Firewalls" comment="" ro="False">
-      <Firewall id="fw-firewall2" host_OS="pix_os" inactive="False" lastCompiled="1163922727" lastInstalled="0" lastModified="1263587335" platform="pix" version="6.2" name="firewall" comment="this is simple firewall with two interfaces. Test regular policy rules, including IP_fragments rule" ro="False">
+      <Firewall id="fw-firewall2" host_OS="pix_os" inactive="False" lastCompiled="1163922727" lastInstalled="0" lastModified="1286404854" platform="pix" version="6.2" name="firewall" comment="this is simple firewall with two interfaces. Test regular policy rules, including IP_fragments rule" ro="False">
         <NAT id="nat-firewall2" name="NAT" comment="" ro="False" ipv4_rule_set="False" ipv6_rule_set="False" top_rule_set="True">
           <NATRule id="nat-firewall2-0" disabled="False" position="0" action="Translate" comment="">
             <OSrc neg="False">
@@ -2192,7 +2196,43 @@
             </RItf>
             <RoutingRuleOptions/>
           </RoutingRule>
-          <RoutingRule id="id23287X67574" disabled="False" group="" metric="0" position="3" comment="">
+          <RoutingRule id="id18754X10210" disabled="False" group="" metric="0" position="3" comment="">
+            <RDst neg="False">
+              <ObjectRef ref="id68966X11724"/>
+            </RDst>
+            <RGtw neg="False">
+              <ObjectRef ref="id23284X67574"/>
+            </RGtw>
+            <RItf neg="False">
+              <ObjectRef ref="sysid0"/>
+            </RItf>
+            <RoutingRuleOptions/>
+          </RoutingRule>
+          <RoutingRule id="id18778X10210" disabled="False" group="" metric="0" position="4" comment="">
+            <RDst neg="False">
+              <ObjectRef ref="id68975X11724"/>
+            </RDst>
+            <RGtw neg="False">
+              <ObjectRef ref="sysid0"/>
+            </RGtw>
+            <RItf neg="False">
+              <ObjectRef ref="if-FW-firewall2-eth0"/>
+            </RItf>
+            <RoutingRuleOptions/>
+          </RoutingRule>
+          <RoutingRule id="id169097X11030" disabled="False" group="" metric="0" position="5" comment="">
+            <RDst neg="False">
+              <ObjectRef ref="id68984X11724"/>
+            </RDst>
+            <RGtw neg="False">
+              <ObjectRef ref="sysid0"/>
+            </RGtw>
+            <RItf neg="False">
+              <ObjectRef ref="sysid0"/>
+            </RItf>
+            <RoutingRuleOptions/>
+          </RoutingRule>
+          <RoutingRule id="id23287X67574" disabled="False" group="" metric="0" position="6" comment="">
             <RDst neg="False">
               <ObjectRef ref="id3B665643"/>
             </RDst>
@@ -2201,6 +2241,30 @@
             </RGtw>
             <RItf neg="False">
               <ObjectRef ref="if-FW-firewall2-eth1"/>
+            </RItf>
+            <RoutingRuleOptions/>
+          </RoutingRule>
+          <RoutingRule id="id69047X11724" disabled="False" group="" metric="0" position="7" comment="multipath routing is not supported&#10;">
+            <RDst neg="False">
+              <ObjectRef ref="id69063X11724"/>
+            </RDst>
+            <RGtw neg="False">
+              <ObjectRef ref="id30235X67574"/>
+            </RGtw>
+            <RItf neg="False">
+              <ObjectRef ref="if-FW-firewall2-eth0"/>
+            </RItf>
+            <RoutingRuleOptions/>
+          </RoutingRule>
+          <RoutingRule id="id69055X11724" disabled="False" group="" metric="0" position="8" comment="">
+            <RDst neg="False">
+              <ObjectRef ref="id69063X11724"/>
+            </RDst>
+            <RGtw neg="False">
+              <ObjectRef ref="id23284X67574"/>
+            </RGtw>
+            <RItf neg="False">
+              <ObjectRef ref="if-FW-firewall2-eth0"/>
             </RItf>
             <RoutingRuleOptions/>
           </RoutingRule>
